--- a/wordcloud/src/main/resources/application.properties
+++ b/wordcloud/src/main/resources/application.properties
@@ -1,3 +1,9 @@
+# Currently only tested with mstdn.social
+mastodon.scheme=wss
+mastodon.url=mstdn.social
+mastodon.port=443
+mastodon.hashtag=vmware
+
 twitter.bearer.token=my-bearer-token
 twitter.hashtags=#vmware
 twitter.search.mode=interval
