--- a/mastodonapiclient/pom.xml
+++ b/mastodonapiclient/pom.xml
@@ -7,7 +7,6 @@
 		<artifactId>social-wordcloud</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
-	<groupId>jp.vmware.tanzu.twitterwordcloud</groupId>
 	<artifactId>mastodonapiclient</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>mastodonapiclient</name>
@@ -36,13 +35,11 @@
 			<groupId>org.springframework.integration</groupId>
 			<artifactId>spring-integration-websocket</artifactId>
 		</dependency>
+
 		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-stream</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-stream-binder-rabbit</artifactId>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.5.14</version>
 		</dependency>
 		<dependency>
 			<groupId>org.jsoup</groupId>
