--- a/mastodonapiclient/pom.xml
+++ b/mastodonapiclient/pom.xml
@@ -35,6 +35,10 @@
 			<groupId>org.springframework.integration</groupId>
 			<artifactId>spring-integration-websocket</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-websocket</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
