Update social message

--- a/wordcloud/src/main/resources/application.properties
+++ b/wordcloud/src/main/resources/application.properties
@@ -19,7 +19,7 @@ spring.datasource.username=sa
 spring.datasource.password=
 
 db.type=RDB
-db.instance=TweetDB
+db.instance=SocialDB
 app.name=wordcloud
 service.name=standalone
 wavefront.application.name=${app.name}
