--- a/mastodonapiclient/src/main/resources/application.properties
+++ b/mastodonapiclient/src/main/resources/application.properties
@@ -1,10 +1,12 @@
 logging.level.jp.vmware.tanzu = DEBUG
+logging.level.org.springframework.web.client = DEBUG
 
 # Currently only tested with mstdn.social
-mastodon.scheme=wss
+mastodon.scheme=https
 mastodon.url=mstdn.social
 mastodon.port=443
 mastodon.hashtag=vmware
+mastodon.search.mode=interval
 
 app.name=wordcloud
 wavefront.application.name=${app.name}
