--- a/wordcloud/src/main/resources/application.properties
+++ b/wordcloud/src/main/resources/application.properties
@@ -3,6 +3,7 @@ mastodon.scheme=wss
 mastodon.url=mstdn.social
 mastodon.port=443
 mastodon.hashtag=vmware
+mastodon.search.mode=interval
 
 twitter.bearer.token=my-bearer-token
 twitter.hashtags=#vmware
