Update to HTTPS

--- a/wordcloud/src/main/resources/application.properties
+++ b/wordcloud/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Currently only tested with mstdn.social
-mastodon.scheme=wss
+mastodon.scheme=https
 mastodon.url=mstdn.social
 mastodon.port=443
 mastodon.hashtag=vmware
