--- a/twitterapiclient/src/main/resources/application.properties
+++ b/twitterapiclient/src/main/resources/application.properties
@@ -15,3 +15,5 @@ management.endpoint.health.probes.enabled=true
 management.endpoint.health.show-details=always
 
 message.queue.exchange=tweet-fanout
+logging.pattern.dateformat=yyyy-MM-dd HH:mm:ss.SSS
+management.endpoints.jmx.exposure.include=*
