--- a/wordcloud/src/main/resources/application.properties
+++ b/wordcloud/src/main/resources/application.properties
@@ -35,3 +35,5 @@ management.endpoint.health.show-details=always
 
 message.queue.exchange=tweet-fanout
 message.queue.queue=tweet-handler
+logging.pattern.dateformat=yyyy-MM-dd HH:mm:ss.SSS
+management.endpoints.jmx.exposure.include=*
