--- a/mastodonapiclient/pom.xml
+++ b/mastodonapiclient/pom.xml
@@ -43,7 +43,7 @@
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
-			<version>4.5.14</version>
+			<version>${httpcomponents.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.jsoup</groupId>
