--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.0.0</version>
+        <version>3.0.6</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>jp.vmware.tanzu.socialwordcloud</groupId>
@@ -16,14 +16,15 @@
     <description>Creates a wordcloud from social tweets</description>
     <properties>
         <java.version>17</java.version>
-        <spring-cloud.version>2021.0.5</spring-cloud.version>
+        <spring-cloud.version>2022.0.2</spring-cloud.version>
         <spring-cloud-bindings.version>1.11.0</spring-cloud-bindings.version>
         <springdoc-openapi-ui.version>1.7.0</springdoc-openapi-ui.version>
-        <wavefront.version>2.3.4</wavefront.version>
+        <wavefront.version>3.0.1</wavefront.version>
         <p6spy.version>3.9.1</p6spy.version>
         <twitter.sdk.version>2.0.3</twitter.sdk.version>
         <kuromoji.version>0.9.0</kuromoji.version>
         <jsoup.version>1.15.4</jsoup.version>
+        <httpcomponents.version>4.5.14</httpcomponents.version>
         <!-- Web dependencies -->
         <webjars-bootstrap.version>5.2.3</webjars-bootstrap.version>
         <webjars-jquery.version>3.6.4</webjars-jquery.version>
@@ -31,6 +32,9 @@
         <webjars-d3cloud.version>1.2.5</webjars-d3cloud.version>
         <webjars-axios.version>1.3.4</webjars-axios.version>
         <webjars-clr.version>4.0.1</webjars-clr.version>
+        <frontend-maven-plugin.version>1.12.1</frontend-maven-plugin.version>
+        <install-node-and-npm.node.version>v18.13.0</install-node-and-npm.node.version>
+        <install-node-and-npm.npm.version>8.19.3</install-node-and-npm.npm.version>
         <spring-boot.repackage.skip>true</spring-boot.repackage.skip>
 
         <maven.test.skip>true</maven.test.skip>
