--- a/twitterapiclient/pom.xml
+++ b/twitterapiclient/pom.xml
@@ -8,7 +8,7 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <artifactId>twitterapiclient</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>${project.parent.version}</version>
     <name>twitterapiclient</name>
     <description>twitterapiclient</description>
 
@@ -16,7 +16,7 @@
         <dependency>
             <groupId>jp.vmware.tanzu.socialwordcloud</groupId>
             <artifactId>library</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>${project.parent.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
