Update wavefront to sb3 version 1

--- a/mastodonapiclient/src/main/resources/application.properties
+++ b/mastodonapiclient/src/main/resources/application.properties
@@ -9,8 +9,4 @@ mastodon.hashtag=vmware
 mastodon.search.mode=interval
 
 app.name=wordcloud
-wavefront.application.name=${app.name}
-wavefront.application.service=${app.name}_mastodonapiclient
-wavefront.tracing.enabled=false
-wavefront.freemium-account=false
-management.metrics.export.wavefront.enabled=false
+management.endpoints.web.exposure.include=*
