--- a/pom.xml
+++ b/pom.xml
@@ -20,23 +20,24 @@
         <spring-cloud-bindings.version>1.11.0</spring-cloud-bindings.version>
         <springdoc-openapi-ui.version>1.7.0</springdoc-openapi-ui.version>
         <wavefront.version>3.0.1</wavefront.version>
-        <p6spy.version>3.9.1</p6spy.version>
+        <datasource-micrometer.version>1.0.2</datasource-micrometer.version>
         <twitter.sdk.version>2.0.3</twitter.sdk.version>
         <kuromoji.version>0.9.0</kuromoji.version>
         <jsoup.version>1.15.4</jsoup.version>
         <httpcomponents.version>4.5.14</httpcomponents.version>
+        <spring-javaformat-maven-plugin.version>0.0.38</spring-javaformat-maven-plugin.version>
         <!-- Web dependencies -->
         <webjars-bootstrap.version>5.2.3</webjars-bootstrap.version>
         <webjars-jquery.version>3.6.4</webjars-jquery.version>
-        <webjars-d3js.version>7.6.1</webjars-d3js.version>
+        <webjars-d3js.version>7.8.4</webjars-d3js.version>
         <webjars-d3cloud.version>1.2.5</webjars-d3cloud.version>
         <webjars-axios.version>1.3.4</webjars-axios.version>
         <webjars-clr.version>4.0.1</webjars-clr.version>
         <frontend-maven-plugin.version>1.12.1</frontend-maven-plugin.version>
         <install-node-and-npm.node.version>v18.13.0</install-node-and-npm.node.version>
         <install-node-and-npm.npm.version>8.19.3</install-node-and-npm.npm.version>
-        <spring-boot.repackage.skip>true</spring-boot.repackage.skip>
 
+        <spring-boot.repackage.skip>true</spring-boot.repackage.skip>
         <maven.test.skip>true</maven.test.skip>
         <org.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener>warn
         </org.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener>
@@ -72,7 +73,7 @@
             <plugin>
                 <groupId>io.spring.javaformat</groupId>
                 <artifactId>spring-javaformat-maven-plugin</artifactId>
-                <version>0.0.38</version>
+                <version>${spring-javaformat-maven-plugin.version}</version>
             </plugin>
         </plugins>
     </build>
