--- a/wordcloud/src/main/resources/application.properties
+++ b/wordcloud/src/main/resources/application.properties
@@ -1,5 +1,3 @@
-logging.level.jp.vmware.tanzu = DEBUG
-
 # Currently only tested with mstdn.social
 mastodon.scheme=https
 mastodon.url=mstdn.social
@@ -13,7 +11,14 @@ twitter.search.mode=interval
 twitter.search.lang=en
 twitter.interval=15000
 
-spring.jpa.generate-ddl=true
+spring.sql.init.mode=always
+spring.sql.init.schema-locations=classpath*:db/${database}/schema.sql
+spring.sql.init.data-locations=classpath*:db/${database}/data.sql
+
+# JPA
+spring.jpa.hibernate.ddl-auto=none
+
+spring.jpa.open-in-view=true
 
 spring.session.jdbc.initialize-schema=always
 spring.datasource.driver-class-name=org.h2.Driver
@@ -26,15 +31,16 @@ db.instance=SocialDB
 app.name=wordcloud
 service.name=standalone
 
-management.wavefront.metrics.export.enabled=true
+message.queue.exchange=tweet-fanout
+message.queue.queue=tweet-handler
 
 management.health.rabbit.enabled=false
 management.health.redis.enabled=false
 management.endpoint.health.probes.enabled=true
 management.endpoint.health.show-details=always
 
-message.queue.exchange=tweet-fanout
-message.queue.queue=tweet-handler
+
 logging.pattern.dateformat=yyyy-MM-dd HH:mm:ss.SSS
 management.endpoints.jmx.exposure.include=*
 management.endpoints.web.exposure.include=*
+management.endpoint.env.show-values=ALWAYS
