Update wavefront properties

--- a/wordcloud/src/main/resources/application.properties
+++ b/wordcloud/src/main/resources/application.properties
@@ -34,6 +34,10 @@ service.name=standalone
 message.queue.exchange=tweet-fanout
 message.queue.queue=tweet-handler
 
+management.wavefront.application.name=${app.name}
+management.wavefront.application.service-name=${service.name}
+
+
 management.health.rabbit.enabled=false
 management.health.redis.enabled=false
 management.endpoint.health.probes.enabled=true
@@ -44,3 +48,6 @@ logging.pattern.dateformat=yyyy-MM-dd HH:mm:ss.SSS
 management.endpoints.jmx.exposure.include=*
 management.endpoints.web.exposure.include=*
 management.endpoint.env.show-values=ALWAYS
+
+
+
