--- a/wordcloud/src/main/resources/application.properties
+++ b/wordcloud/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+logging.level.jp.vmware.tanzu.socialwordcloud.library.observability=DEBUG
+
 # Currently only tested with mstdn.social
 mastodon.scheme=https
 mastodon.url=mstdn.social
