Add RabbitMQ tracing

--- a/mastodonapiclient/src/main/resources/application.properties
+++ b/mastodonapiclient/src/main/resources/application.properties
@@ -10,3 +10,4 @@ mastodon.search.mode=interval
 
 app.name=wordcloud
 management.endpoints.web.exposure.include=*
+message.queue.exchange=test-exchange
