Remove debug level logging

--- a/wordcloud/src/main/resources/application.properties
+++ b/wordcloud/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-logging.level.jp.vmware.tanzu.socialwordcloud.library.observability=DEBUG
+# logging.level.jp.vmware.tanzu.socialwordcloud.library.observability=DEBUG
 
 # Currently only tested with mstdn.social
 mastodon.scheme=https
