--- a/pom.xml
+++ b/pom.xml
@@ -16,14 +16,14 @@
     <description>Creates a wordcloud from social tweets</description>
     <properties>
         <java.version>17</java.version>
-        <spring-cloud.version>2022.0.4</spring-cloud.version>
-        <spring-cloud-bindings.version>1.13.0</spring-cloud-bindings.version>
+        <spring-cloud-bindings.version>2.0.2</spring-cloud-bindings.version>
         <springdoc-openapi-ui.version>1.7.0</springdoc-openapi-ui.version>
         <wavefront.version>3.0.1</wavefront.version>
         <datasource-micrometer.version>1.0.2</datasource-micrometer.version>
         <twitter.sdk.version>2.0.3</twitter.sdk.version>
         <kuromoji.version>0.9.0</kuromoji.version>
         <jsoup.version>1.16.1</jsoup.version>
+        <jsqlparser.version>4.7</jsqlparser.version>
         <httpcomponents.version>4.5.14</httpcomponents.version>
         <spring-javaformat-maven-plugin.version>0.0.39</spring-javaformat-maven-plugin.version>
 
