--- a/mastodonapiclient/pom.xml
+++ b/mastodonapiclient/pom.xml
@@ -50,5 +50,10 @@
 			<artifactId>jsoup</artifactId>
 			<version>${jsoup.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.13.0</version>
+		</dependency>
 	</dependencies>
 </project>
