--- a/modelviewcontroller/src/main/resources/application.properties
+++ b/modelviewcontroller/src/main/resources/application.properties
@@ -2,7 +2,7 @@ twitter.search.lang=ja
 
 spring.jpa.generate-ddl=true
 spring.session.store-type=jdbc
-spring.session.jdbc.initialize-schema=always
+spring.session.jdbc.initialize-schema=embedded
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.username=sa
@@ -18,3 +18,5 @@ management.endpoint.health.show-details=always
 
 message.queue.exchange=tweet-fanout
 message.queue.queue=tweet-handler
+
+openai.vector.table=vector_db
