--- a/modelviewcontroller/pom.xml
+++ b/modelviewcontroller/pom.xml
@@ -18,6 +18,11 @@
             <version>${project.parent.version}</version>
         </dependency>
         <dependency>
+            <groupId>jp.vmware.tanzu.socialwordcloud</groupId>
+            <artifactId>ai_rag</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
