--- a/ai_rag/pom.xml
+++ b/ai_rag/pom.xml
@@ -30,15 +30,8 @@
         <dependency>
             <groupId>org.springframework.experimental.ai</groupId>
             <artifactId>spring-ai-openai-spring-boot-starter</artifactId>
-            <version>0.2.0-SNAPSHOT</version>
+            <version>${spring-ai.version}</version>
         </dependency>
-        <dependency>
-            <groupId>com.nimbusds</groupId>
-            <artifactId>oauth2-oidc-sdk</artifactId>
-            <version>9.43.3</version>
-            <scope>compile</scope>
-        </dependency>
-
     </dependencies>
 
     <build>
