--- a/modelviewcontroller/src/main/resources/application.properties
+++ b/modelviewcontroller/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+# logging.level.jp.vmware.tanzu.socialwordcloud.library.observability=DEBUG
+
 twitter.search.lang=ja
 
 spring.jpa.generate-ddl=true
@@ -10,7 +12,7 @@ spring.datasource.password=
 
 db.type=RDB
 db.instance=TweetDB
-app.name=wordcloud
+app.name=wordcloud-testing
 management.health.rabbit.enabled=false
 management.health.redis.enabled=false
 management.endpoint.health.probes.enabled=true
@@ -18,5 +20,3 @@ management.endpoint.health.show-details=always
 
 message.queue.exchange=tweet-fanout
 message.queue.queue=tweet-handler
-
-openai.vector.table=vector_db
