--- a/ai_rag/pom.xml
+++ b/ai_rag/pom.xml
@@ -16,7 +16,7 @@
         <dependency>
             <groupId>jp.vmware.tanzu.socialwordcloud</groupId>
             <artifactId>library</artifactId>
-            <version>${project.parent.version}</version>
+            <version>0.0.1-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
