--- a/wordcloud/src/main/resources/application.properties
+++ b/wordcloud/src/main/resources/application.properties
@@ -22,7 +22,10 @@ spring.jpa.hibernate.ddl-auto=none
 
 spring.jpa.open-in-view=true
 
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.data.redis.RedisAutoConfiguration
+spring.data.redis.repositories.enabled=false
 spring.session.jdbc.initialize-schema=always
+
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.username=sa
@@ -52,4 +55,4 @@ management.endpoints.web.exposure.include=*
 management.endpoint.env.show-values=ALWAYS
 
 
-
+spring.security.user.password=password
