--- a/ai_rag/src/main/resources/application.properties
+++ b/ai_rag/src/main/resources/application.properties
@@ -1,2 +1,6 @@
 app.name=ra
 openai.vector.table=vector_db
+
+spring.sql.init.mode=always
+spring.sql.init.schema-locations=classpath*:db/${database}/schema.sql
+spring.sql.init.data-locations=classpath*:db/${database}/data.sql
