--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
     <description>Creates a wordcloud from social tweets</description>
     <properties>
         <java.version>17</java.version>
-        <spring-ai.version>0.2.0-SNAPSHOT</spring-ai.version>
+        <spring-ai.version>0.8.1</spring-ai.version>
         <spring-cloud-bindings.version>2.0.3</spring-cloud-bindings.version>
         <springdoc-openapi-ui.version>1.8.0</springdoc-openapi-ui.version>
         <wavefront.version>3.2.0</wavefront.version>
