Update spring ai project

--- a/wordcloud/src/main/resources/application.properties
+++ b/wordcloud/src/main/resources/application.properties
@@ -56,3 +56,7 @@ management.endpoint.env.show-values=ALWAYS
 
 
 spring.security.user.password=password
+
+spring.datasource.hikari.maximum-pool-size=3
+spring.datasource.hikari.idle-timeout=0
+spring.datasource.hikari.maxLifetime=0
